2003-12-05  Terry <tbiggs@users.sf.net>

	* removed 'point to' and 'add to root' items form bookmark menus.
	* removed 'view hints' from main menu.
	

2003-12-05  Andy <andyp@users.sf.net>

	* string updates to editors and about boxes
	

2003-12-05  Andy <andyp@users.sf.net>

	* added spec file based on original by Hugo van der Kooij. This will be 
          generated by configure with the correct information for building based on
          the tarball created by 'make dist'. This is a first draft but it appears to
          work for me.


2003-12-04  Terry <tbiggs@users.sf.net>

	* work on removing GtkFrames and replacing them with GNOME2-style bold 
          headings
	

2003-12-03  Terry <tbiggs@users.sf.net>

	* bumped to 0.9.dev17
	* added gui_alert_dialog() to gnome2/dialog.c - much closer to HIG 
	  for alerts than gui_gs_dialog().
	* added new create_dialog_request() should be easier to get to conform 
	  to the HIG it's called by gui_gs_dialog().
		

2003-12-02  Terry <tbiggs@users.sf.net>

	* work in dialog.c 
	   * rearanged buttons 
	   * stock icon can be added
	   * if title string is not passed to gui_gs_dialog(GS_DIALOG * info)
	     you get no title instead of default title.
	   * top label is formatted bold.
	   * changed code to use gtk_dialog "response" signal when 
	     buttons are clicked instead of button "clicked" signal
	     

2003-12-01  Terry <tbiggs@users.sf.net>

	* fixed bug #852017 (?) - gs will run if setup_druid is canceled
	  but now pops up a dialog and asks if the user wishes to run the 
	  preferences_dialog


2003-11-30  Andy <andyp@users.sf.net>

	* stripped out the colour-changing code from the setup_druid as
	  it is inconsistent to change the heading colour between pages
	

2003-11-29  Terry <tbiggs@users.sf.net>

	* add gnome-spell support


2003-11-28  Terry <tbiggs@users.sf.net>

	* remove close button from the search dialog


2003-11-27  Terry <tbiggs@users.sf.net>

	* bumped to 0.9.dev16